src/test/ui/issues/issue-28433.stderr
error: unnecessary visibility qualifier
  --> $DIR/issue-28433.rs:4:5
   |
LL |     pub Duck,
   |     ^^^ `pub` not permitted here

error: aborting due to previous error

